# LiteML

./: Cargo.toml  README.md
src/: codegen.rs  lexer.rs  main.rs  parser.rs
