[package]
name = "lite_ml"
version = "0.1.3"
edition = "2021"
description = "Lightweight markup language compiler."
license = "MIT"
documentation = "https://nanocoder1007.github.io/nanocoder1007/LiteML/book/index.html"
repository = "https://github.com/NanoCoder1007/LiteML"

[dependencies]
clap   = { version = "4.4", features = ["derive"] }
regex  = "1.10"
anyhow = "1.0"
